crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__raw_tstring.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
snapshot_kind: text
---
[
    Expr(
        StmtExpr {
            node_index: NodeIndex(None),
            range: 0..7,
            value: TString(
                ExprTString {
                    node_index: NodeIndex(None),
                    range: 0..7,
                    value: TStringValue {
                        inner: Single(
                            TString {
                                range: 0..7,
                                node_index: NodeIndex(None),
                                elements: [
                                    Interpolation(
                                        InterpolatedElement {
                                            range: 3..6,
                                            node_index: NodeIndex(None),
                                            expression: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 4..5,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            debug_text: None,
                                            conversion: None,
                                            format_spec: None,
                                        },
                                    ),
                                ],
                                flags: TStringFlags {
                                    quote_style: Double,
                                    prefix: Raw {
                                        uppercase_r: false,
                                    },
                                    triple_quoted: false,
                                    unclosed: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
