crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__triple_quoted_raw_fstring.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
snapshot_kind: text
---
[
    Expr(
        StmtExpr {
            node_index: AtomicNodeIndex(..),
            range: 0..11,
            value: FString(
                ExprFString {
                    node_index: AtomicNodeIndex(..),
                    range: 0..11,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..11,
                                    node_index: AtomicNodeIndex(..),
                                    elements: [
                                        Expression(
                                            FStringExpressionElement {
                                                range: 5..8,
                                                node_index: AtomicNodeIndex(..),
                                                expression: Name(
                                                    ExprName {
                                                        node_index: AtomicNodeIndex(..),
                                                        range: 6..7,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: None,
                                            },
                                        ),
                                    ],
                                    flags: FStringFlags {
                                        quote_style: Double,
                                        prefix: Raw {
                                            uppercase_r: false,
                                        },
                                        triple_quoted: true,
                                    },
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
